--- a/package.json
+++ b/package.json
@@ -42,38 +42,38 @@
     "docs:preview": "vitepress preview docs"
   },
   "peerDependencies": {
-    "@tresjs/core": "2.1.2",
-    "three": "latest",
-    "vue": "^3.3.4"
+    "@tresjs/core": ">=2.2.0",
+    "three": ">=0.133",
+    "vue": ">=3.3"
   },
   "dependencies": {
-    "@vueuse/core": "^10.1.2",
-    "postprocessing": "^6.31.0",
-    "three": "^0.152.2",
-    "three-stdlib": "^2.23.4",
-    "vue": "^3.3.4"
+    "@vueuse/core": "^10.2.0",
+    "postprocessing": "^6.32.1",
+    "three-stdlib": "^2.23.10"
   },
   "devDependencies": {
+    "vue": "^3.3.4",
+    "three": "^0.153.0",
     "@alvarosabu/prettier-config": "^1.3.0",
     "@release-it/conventional-changelog": "^5.1.1",
-    "@tresjs/cientos": "2.1.2",
-    "@tresjs/core": "2.1.2",
+    "@tresjs/cientos": "2.1.4",
+    "@tresjs/core": "2.2.0",
     "@types/three": "^0.152.1",
     "@vitejs/plugin-vue": "^4.1.0",
-    "gsap": "^3.11.5",
+    "gsap": "^3.12.1",
     "kolorist": "^1.7.0",
-    "pathe": "^1.1.0",
+    "pathe": "^1.1.1",
     "prettier": "^2.8.8",
-    "release-it": "^15.10.3",
+    "release-it": "^15.11.0",
     "rollup-plugin-analyzer": "^4.0.0",
-    "rollup-plugin-visualizer": "^5.9.0",
-    "typescript": "^5.0.4",
-    "unocss": "^0.52.5",
+    "rollup-plugin-visualizer": "^5.9.2",
+    "typescript": "^5.1.3",
+    "unocss": "^0.53.1",
     "vite": "^4.3.9",
     "vite-plugin-banner": "^0.7.0",
     "vite-plugin-dts": "2.3.0",
     "vite-svg-loader": "^4.0.0",
-    "vitepress": "1.0.0-beta.1",
-    "vue-tsc": "^1.6.5"
+    "vitepress": "1.0.0-beta.2",
+    "vue-tsc": "^1.8.0"
   }
 }
