docs: added depth of field and fix docs demos

--- a/docs/package.json
+++ b/docs/package.json
@@ -15,6 +15,7 @@
     "vitepress": "1.0.0-beta.1"
   },
   "dependencies": {
+    "@tresjs/post-processing": "workspace:^",
     "gsap": "^3.11.5"
   }
 }
