--- a/package.json
+++ b/package.json
@@ -42,11 +42,11 @@
     "docs:preview": "vitepress preview docs"
   },
   "peerDependencies": {
-    "@tresjs/core": ">=2.3.0",
     "three": ">=0.133",
     "vue": ">=3.3"
   },
   "dependencies": {
+    "@tresjs/core": "2.4.0-next.6",
     "@vueuse/core": "^10.2.0",
     "postprocessing": "^6.32.1",
     "three-stdlib": "^2.23.10"
@@ -55,7 +55,6 @@
     "@alvarosabu/prettier-config": "^1.3.0",
     "@release-it/conventional-changelog": "^5.1.1",
     "@tresjs/cientos": "2.1.4",
-    "@tresjs/core": "2.4.0",
     "@types/three": "^0.152.1",
     "@vitejs/plugin-vue": "^4.2.3",
     "gsap": "^3.12.1",
