--- a/playground/package.json
+++ b/playground/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@tresjs/cientos": "2.1.4",
-    "@tresjs/core": "2.4.0",
+    "@tresjs/core": "2.4.0-next.6",
     "vue-router": "^4.2.2"
   },
   "devDependencies": {
