--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "vue": ">=3.3"
   },
   "dependencies": {
-    "@tresjs/core": "2.4.0-next.8",
+    "@tresjs/core": "^3.0.1",
     "@vueuse/core": "^10.2.0",
     "postprocessing": "^6.32.1",
     "three-stdlib": "^2.23.10"
@@ -54,7 +54,6 @@
   "devDependencies": {
     "@alvarosabu/prettier-config": "^1.3.0",
     "@release-it/conventional-changelog": "^5.1.1",
-    "@tresjs/cientos": "2.1.4",
     "@types/three": "^0.152.1",
     "@vitejs/plugin-vue": "^4.2.3",
     "gsap": "^3.12.1",
