--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "preview": "vite preview",
     "release": "release-it",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx,.vue",
+    "lint:fix": "pnpm run lint --fix",
     "docs:dev": "vitepress dev docs",
     "docs:build": "vitepress build docs",
     "docs:preview": "vitepress preview docs"
