--- a/docs/.eslintrc.json
+++ b/docs/.eslintrc.json
@@ -1,6 +1,3 @@
 {
-  "extends": "@tresjs/eslint-config-vue",
-  "rules": {
-    "no-console": "off"
-  }
+  "extends": "@tresjs/eslint-config-vue"
 }
