--- a/.gitignore
+++ b/.gitignore
@@ -22,5 +22,5 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
-# docs/.vitepress/dist/
-# docs/.vitepress/cache/
+docs/.vitepress/dist/
+docs/.vitepress/cache/
