--- a/package.json
+++ b/package.json
@@ -47,32 +47,33 @@
     "vue": ">=3.3"
   },
   "dependencies": {
-    "@tresjs/core": "^3.0.1",
-    "@vueuse/core": "^10.2.0",
-    "postprocessing": "^6.32.1",
-    "three-stdlib": "^2.23.10"
+    "@tresjs/core": "^3.4.1",
+    "@unocss/core": "^0.57.1",
+    "@vueuse/core": "^10.5.0",
+    "postprocessing": "^6.33.2",
+    "three-stdlib": "^2.28.3"
   },
   "devDependencies": {
-    "@release-it/conventional-changelog": "^5.1.1",
-    "@tresjs/eslint-config-vue": "^0.2.0",
-    "@types/three": "^0.152.1",
-    "@vitejs/plugin-vue": "^4.2.3",
-    "gsap": "^3.12.1",
+    "@release-it/conventional-changelog": "^7.0.2",
+    "@tresjs/eslint-config-vue": "^0.2.1",
+    "@types/three": "^0.157.2",
+    "@vitejs/plugin-vue": "^4.4.0",
+    "gsap": "^3.12.2",
     "kolorist": "^1.8.0",
     "pathe": "^1.1.1",
-    "prettier": "^2.8.8",
-    "release-it": "^15.11.0",
+    "prettier": "^3.0.3",
+    "release-it": "^16.2.1",
     "rollup-plugin-analyzer": "^4.0.0",
     "rollup-plugin-visualizer": "^5.9.2",
-    "three": "^0.153.0",
-    "typescript": "^5.1.3",
-    "unocss": "^0.53.3",
-    "vite": "^4.3.9",
-    "vite-plugin-banner": "^0.7.0",
-    "vite-plugin-dts": "2.3.0",
+    "three": "^0.158.0",
+    "typescript": "^5.2.2",
+    "unocss": "^0.57.1",
+    "vite": "^4.5.0",
+    "vite-plugin-banner": "^0.7.1",
+    "vite-plugin-dts": "3.6.2",
     "vite-svg-loader": "^4.0.0",
-    "vitepress": "1.0.0-beta.3",
-    "vue": "^3.3.4",
-    "vue-tsc": "^1.8.1"
+    "vitepress": "1.0.0-rc.24",
+    "vue": "^3.3.7",
+    "vue-tsc": "^1.8.22"
   }
 }
