--- a/docs/package.json
+++ b/docs/package.json
@@ -9,15 +9,15 @@
     "preview": "vitepress preview"
   },
   "dependencies": {
-    "@tresjs/cientos": "^3.0.1",
-    "@tresjs/core": "^3.2.2",
+    "@tresjs/cientos": "^3.5.1",
+    "@tresjs/core": "^3.5.0",
     "@tresjs/post-processing": "workspace:^",
-    "gsap": "^3.11.5"
+    "gsap": "^3.12.2"
   },
   "devDependencies": {
-    "unocss": "^0.52.3",
-    "unplugin-vue-components": "^0.24.1",
+    "unocss": "^0.57.2",
+    "unplugin-vue-components": "^0.25.2",
     "vite-svg-loader": "^4.0.0",
-    "vitepress": "1.0.0-beta.1"
+    "vitepress": "1.0.0-rc.25"
   }
 }
