--- a/playground/package.json
+++ b/playground/package.json
@@ -4,19 +4,20 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --host",
     "build": "vue-tsc && vite build",
     "preview": "vite preview"
   },
   "dependencies": {
-    "@tresjs/cientos": "^3.0.1",
-    "@tresjs/core": "3.2.0",
-    "@tresjs/leches": "^0.9.1",
-    "vue-router": "^4.2.2"
+    "@tresjs/cientos": "^3.5.1",
+    "@tresjs/core": "3.5.0",
+    "@tresjs/leches": "^0.13.0",
+    "vue-router": "^4.2.5"
   },
   "devDependencies": {
-    "@types/three": "^0.152.1",
-    "unplugin-auto-import": "^0.16.4",
-    "unplugin-vue-components": "^0.25.1"
+    "@types/three": "^0.158.1",
+    "unplugin-auto-import": "^0.16.7",
+    "unplugin-vue-components": "^0.25.2",
+    "vite-plugin-qrcode": "^0.2.2"
   }
 }
