--- a/playground-nuxt/package.json
+++ b/playground-nuxt/package.json
@@ -10,14 +10,14 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
-    "@tresjs/cientos": "^3.5.1",
-    "@tresjs/nuxt": "^1.2.2",
-    "@types/three": "^0.152.1"
+    "@tresjs/cientos": "^3.7.0",
+    "@tresjs/nuxt": "^2.0.2",
+    "@types/three": "^0.160.0"
   },
   "devDependencies": {
     "@nuxt/devtools": "latest",
-    "nuxt": "^3.8.0",
-    "vue": "^3.3.7",
-    "vue-router": "^4.2.5"
+    "nuxt": "^3.9.3",
+    "vue": "^3.4.15",
+    "vue-router": "4.2.5"
   }
 }
