--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@tresjs/post-processing",
   "type": "module",
-  "version": "0.7.1",
+  "version": "1.0.0-next.0",
   "packageManager": "pnpm@8.10.2",
   "description": "Post-processing library for TresJS",
   "author": "Alvaro Saburido <hola@alvarosaburido.dev> (https://github.com/alvarosabu/)",
