--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@tresjs/post-processing",
   "type": "module",
-  "version": "1.0.0-next.1",
+  "version": "1.0.0-next.2",
   "packageManager": "pnpm@8.10.2",
   "description": "Post-processing library for TresJS",
   "author": "Alvaro Saburido <hola@alvarosaburido.dev> (https://github.com/alvarosabu/)",
@@ -16,14 +16,15 @@
     "fx"
   ],
   "exports": {
-    ".": {
-      "types": "./dist/index.d.ts",
-      "import": "./dist/tres-postprocessing.js"
+    "./three": {
+      "types": "./dist/three.d.ts",
+      "import": "./dist/three.js"
     },
-    "./*": "./*"
+    "./pmndrs": {
+      "types": "./dist/pmndrs.d.ts",
+      "import": "./dist/pmndrs.js"
+    }
   },
-  "main": "./dist/tres-postprocessing.js",
-  "module": "./dist/tres-postprocessing.js",
   "files": [
     "*.d.ts",
     "dist"
