--- a/.github/workflows/pkg.pr.new.yml
+++ b/.github/workflows/pkg.pr.new.yml
@@ -34,4 +34,4 @@ jobs:
         run: pnpm install
       - name: Build
         run: pnpm build
-      - run: pnpm dlx pkg-pr-new publish --compact --pnpm
+      - run: pnpm dlx pkg-pr-new publish --pnpm
