--- a/docs/package.json
+++ b/docs/package.json
@@ -9,16 +9,16 @@
     "preview": "vitepress preview"
   },
   "dependencies": {
-    "@tresjs/cientos": "^3.6.0",
-    "@tresjs/core": "^3.5.1",
+    "@tresjs/cientos": "^4.0.2",
+    "@tresjs/core": "^4.2.10",
     "@tresjs/post-processing": "workspace:^",
     "gsap": "^3.12.3"
   },
   "devDependencies": {
     "@tresjs/leches": "^0.14.0",
-    "unocss": "^0.58.0",
-    "unplugin-vue-components": "^0.26.0",
+    "unocss": "^0.63.0",
+    "unplugin-vue-components": "^0.27.4",
     "vite-svg-loader": "^5.1.0",
-    "vitepress": "1.0.0-rc.31"
+    "vitepress": "1.3.4"
   }
 }
