--- a/package.json
+++ b/package.json
@@ -59,32 +59,32 @@
     "vue": ">=3.4"
   },
   "dependencies": {
-    "@vueuse/core": "^11.1.0",
-    "postprocessing": "^6.36.3"
+    "@vueuse/core": "^11.3.0",
+    "postprocessing": "^6.36.4"
   },
   "devDependencies": {
-    "@release-it/conventional-changelog": "^8.0.2",
-    "@tresjs/core": "^4.3.0",
+    "@release-it/conventional-changelog": "^9.0.3",
+    "@tresjs/core": "^4.3.1",
     "@tresjs/eslint-config": "^1.4.0",
-    "@types/three": "^0.169.0",
-    "@unocss/core": "^0.63.4",
-    "@vitejs/plugin-vue": "^5.1.4",
-    "eslint": "^9.12.0",
+    "@types/three": "^0.170.0",
+    "@unocss/core": "^0.64.1",
+    "@vitejs/plugin-vue": "^5.2.1",
+    "eslint": "^9.15.0",
     "gsap": "^3.12.5",
     "kolorist": "^1.8.0",
     "pathe": "^1.1.2",
-    "release-it": "^17.8.2",
+    "release-it": "^17.10.0",
     "rollup-plugin-analyzer": "^4.0.0",
     "rollup-plugin-visualizer": "^5.12.0",
-    "three": "^0.169.0",
-    "typescript": "^5.6.3",
-    "unocss": "^0.63.4",
-    "vite": "^5.4.8",
+    "three": "^0.170.0",
+    "typescript": "^5.7.2",
+    "unocss": "^0.64.1",
+    "vite": "^6.0.0",
     "vite-plugin-banner": "^0.8.0",
-    "vite-plugin-dts": "4.0.0-beta.1",
+    "vite-plugin-dts": "4.3.0",
     "vite-svg-loader": "^5.1.0",
-    "vitepress": "1.4.0",
-    "vue": "^3.5.12",
-    "vue-tsc": "^2.1.6"
+    "vitepress": "1.5.0",
+    "vue": "^3.5.13",
+    "vue-tsc": "^2.1.10"
   }
 }
