--- a/package.json
+++ b/package.json
@@ -73,7 +73,7 @@
     "postprocessing": "^6.36.4"
   },
   "devDependencies": {
-    "@arethetypeswrong/cli": "^0.17.2",
+    "@arethetypeswrong/cli": "0.17.2",
     "@release-it/conventional-changelog": "^9.0.3",
     "@tresjs/core": "^4.3.1",
     "@tresjs/eslint-config": "^1.4.0",
