--- a/package.json
+++ b/package.json
@@ -73,7 +73,7 @@
     "postprocessing": "^6.36.4"
   },
   "devDependencies": {
-    "@arethetypeswrong/cli": "0.17.2",
+    "@arethetypeswrong/cli": "^0.17.2",
     "@release-it/conventional-changelog": "^9.0.3",
     "@tresjs/core": "^4.3.1",
     "@tresjs/eslint-config": "^1.4.0",
@@ -88,7 +88,7 @@
     "rollup-plugin-analyzer": "^4.0.0",
     "rollup-plugin-visualizer": "^5.12.0",
     "three": "^0.170.0",
-    "typescript": "5.4.2",
+    "typescript": "5.7.2",
     "unocss": "^0.64.1",
     "vite": "^6.0.0",
     "vite-plugin-banner": "^0.8.0",
@@ -99,8 +99,8 @@
     "vue-tsc": "^2.1.10"
   },
   "pnpm": {
-    "patchedDependencies": {
-      "@arethetypeswrong/cli@0.17.2": "patches/@arethetypeswrong__cli@0.17.2.patch"
+    "overrides": {
+      "typescript": "5.7.2"
     }
   }
 }
