--- a/package.json
+++ b/package.json
@@ -88,7 +88,7 @@
     "rollup-plugin-analyzer": "^4.0.0",
     "rollup-plugin-visualizer": "^5.12.0",
     "three": "^0.170.0",
-    "typescript": "5.7.2",
+    "typescript": "^5.7.2",
     "unocss": "^0.64.1",
     "vite": "^6.0.0",
     "vite-plugin-banner": "^0.8.0",
@@ -100,7 +100,7 @@
   },
   "pnpm": {
     "overrides": {
-      "typescript": "5.7.2"
+      "typescript": "^5.7.2"
     }
   }
 }
