fix!: restructure post-processing module and update playground examples
BREAKING CHANGE: Consolidated post-processing effects under a unified namespace (`@tresjs/post-processing`). Pmndrs `EffectComposer` is now `EffectComposerPmndrs`, same for all the effects and composables under `src/core/pmndrs`  to avoid name collisions

--- a/package.json
+++ b/package.json
@@ -24,13 +24,10 @@
     "Tino Koch (https://github.com/Tinoooo)"
   ],
   "exports": {
-    "./three": {
-      "types": "./dist/three.d.ts",
-      "import": "./dist/three.js"
-    },
-    "./pmndrs": {
-      "types": "./dist/pmndrs.d.ts",
-      "import": "./dist/pmndrs.js"
+    ".": {
+      "types": "./dist/tres-post-processing.d.ts",
+      "import": "./dist/tres-post-processing.js",
+      "require": "./dist/tres-post-processing.cjs"
     },
     "./*": "./*"
   },
