--- a/playground/package.json
+++ b/playground/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@tresjs/cientos": "^4.0.2",
     "@tresjs/core": "4.3.1",
+    "@tresjs/post-processing": "workspace:*",
     "vue-router": "^4.5.0"
   },
   "devDependencies": {
