--- a/package.json
+++ b/package.json
@@ -27,12 +27,14 @@
     ".": {
       "types": "./dist/tres-post-processing.d.ts",
       "import": "./dist/tres-post-processing.js",
-      "require": "./dist/tres-post-processing.cjs"
+      "require": "./dist/tres-post-processing.umd.cjs"
     },
     "./*": "./*"
   },
+  "main": "./dist/tres-post-processing.umd.cjs",
+  "module": "./dist/tres-post-processing.js",
+  "types": "./dist/tres-post-processing.d.ts",
   "files": [
-    "*.d.ts",
     "dist"
   ],
   "publishConfig": {
@@ -60,6 +62,7 @@
     "postprocessing": "^6.36.5"
   },
   "devDependencies": {
+
     "@release-it/conventional-changelog": "^9.0.4",
     "@tresjs/core": "^4.3.1",
     "@tresjs/eslint-config": "^1.4.0",
@@ -78,10 +81,15 @@
     "unocss": "^0.65.3",
     "vite": "^6.0.6",
     "vite-plugin-banner": "^0.8.0",
-    "vite-plugin-dts": "4.4.0",
+    "vite-plugin-dts": "^4.5.0",
     "vite-svg-loader": "^5.1.0",
     "vitepress": "1.5.0",
     "vue": "^3.5.13",
     "vue-tsc": "^2.2.0"
+  },
+  "pnpm": {
+    "overrides": {
+      "typescript": "^5.7.2"
+    }
   }
 }
