Refactored useEffectPmndrs to improve type safety and allow for indexed effect recreation

--- a/package.json
+++ b/package.json
@@ -45,10 +45,11 @@
     "preview": "vite preview",
     "release": "release-it",
     "lint": "eslint .",
+    "typecheck": "vue-tsc --noEmit",
     "lint:fix": "eslint . --fix",
     "docs:dev": "vitepress dev docs",
     "docs:build": "vitepress build docs",
-    "docs:preview": "vitepress preview docs"
+    "docs:preview": "vitepress preview"
   },
   "peerDependencies": {
     "@tresjs/core": ">=4.0",
