feat: adapt code and playgrounds to latest changes on ecosystem
- Updated @tresjs/cientos and @tresjs/core to version 5.0.0-next.2 and 5.0.0-next.3 respectively in package.json and pnpm-lock.yaml.
- Refactored GLTF model loading in BlenderCube.vue and Ducky.vue to use state instead of scene for better reactivity.
- Removed unnecessary Suspense components in DepthOfFieldDemo.vue and DotScreenDemo.vue for improved performance.
- Updated ESLint auto-imports and components.d.ts for better type support.
- Cleaned up unused package.json file in playground/public/nuxt-stones.

--- a/docs/package.json
+++ b/docs/package.json
@@ -9,8 +9,8 @@
     "preview": "vitepress preview"
   },
   "dependencies": {
-    "@tresjs/cientos": "^4.1.0",
-    "@tresjs/core": "^4.3.2",
+    "@tresjs/cientos": "5.0.0-next.2",
+    "@tresjs/core": "5.0.0-next.3",
     "@tresjs/post-processing": "workspace:^",
     "gsap": "^3.12.7"
   },
