--- a/package.json
+++ b/package.json
@@ -57,12 +57,13 @@
     "vue": ">=3.4"
   },
   "dependencies": {
+    "@tresjs/cientos": "5.0.0-next.2",
     "@vueuse/core": "^12.5.0",
     "postprocessing": "^6.37.2"
   },
   "devDependencies": {
     "@release-it/conventional-changelog": "^10.0.0",
-    "@tresjs/core": "^4.3.2",
+    "@tresjs/core": "5.0.0-next.3",
     "@tresjs/eslint-config": "^1.4.0",
     "@tresjs/leches": "https://pkg.pr.new/@tresjs/leches@9ad0cd3",
     "@types/three": "^0.172.0",
